swagger codgen and swaggger ui
